packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/chunked_13.py
from gumicorn.http.errors import InvalidChunkSize
request = InvalidChunkSize
